force-app/main/default/objects/Charket__WeChatCoupon__c/Charket__WeChatCoupon__c.object-meta.xml
<CustomObject>
    <label>WeChat Coupon</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeChat Coupons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>