force-app/main/default/objects/Charket__WeChatCoupon__c/fields/Charket__AreaCodes__c.field-meta.xml
<CustomField>
    <fullName>Charket__AreaCodes__c</fullName>
    <label>Area Codes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>