force-app/main/default/objects/Charket__WeChatCoupon__c/fields/Charket__BrandName__c.field-meta.xml
<CustomField>
    <fullName>Charket__BrandName__c</fullName>
    <label>Brand Name</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>