force-app/main/default/objects/Charket__WeChatCoupon__c/fields/Charket__CustomUrl__c.field-meta.xml
<CustomField>
    <fullName>Charket__CustomUrl__c</fullName>
    <label>Custom URL</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>