force-app/main/default/objects/Charket__WeChatCoupon__c/fields/Charket__CustomUrlName__c.field-meta.xml
<CustomField>
    <fullName>Charket__CustomUrlName__c</fullName>
    <label>Custom URL Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>