force-app/main/default/objects/Charket__WeChatCoupon__c/fields/Charket__DeliveredCount__c.field-meta.xml
<CustomField>
    <fullName>Charket__DeliveredCount__c</fullName>
    <label>Delivered Count</label>
    <summaryFilterItems>
        <field>Charket__WeChatCouponDelivery__c.Charket__Status__c</field>
        <operation>equals</operation>
        <value>New, Accepted, Redeemed, Deleted</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Charket__WeChatCouponDelivery__c.Charket__WeChatFollower__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>Charket__WeChatCouponDelivery__c.Charket__WeChatCoupon__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>