force-app/main/default/objects/Charket__WeChatCoupon__c/fields/Charket__Description__c.field-meta.xml
<CustomField>
    <fullName>Charket__Description__c</fullName>
    <label>Description</label>
    <length>3072</length>
    <type>LongTextArea</type>
</CustomField>