force-app/main/default/objects/Charket__WeChatCoupon__c/fields/Charket__GiftDescription__c.field-meta.xml
<CustomField>
    <fullName>Charket__GiftDescription__c</fullName>
    <label>Gift Description</label>
    <length>3072</length>
    <type>LongTextArea</type>
</CustomField>