force-app/main/default/objects/Charket__WeChatCoupon__c/fields/Charket__Inventory__c.field-meta.xml
<CustomField>
    <fullName>Charket__Inventory__c</fullName>
    <formula>Charket__Quantity__c  -  Charket__DeliveredCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>