force-app/main/default/objects/Charket__WeChatCoupon__c/fields/Charket__IsSharable__c.field-meta.xml
<CustomField>
    <fullName>Charket__IsSharable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sharable</label>
    <type>Checkbox</type>
</CustomField>