force-app/main/default/objects/Charket__WeChatCoupon__c/fields/Charket__IsTransferable__c.field-meta.xml
<CustomField>
    <fullName>Charket__IsTransferable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transferable</label>
    <type>Checkbox</type>
</CustomField>