force-app/main/default/objects/Charket__WeChatCoupon__c/fields/Charket__LimitPerFollower__c.field-meta.xml
<CustomField>
    <fullName>Charket__LimitPerFollower__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Limit / Follower</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>