force-app/main/default/objects/Charket__WeChatCoupon__c/fields/Charket__Source__c.field-meta.xml
<CustomField>
    <fullName>Charket__Source__c</fullName>
    <label>Source</label>
    <length>36</length>
    <type>Text</type>
</CustomField>