force-app/main/default/objects/Charket__WeChatCoupon__c/fields/Charket__Type__c.field-meta.xml
<CustomField>
    <fullName>Charket__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
                <default>true</default>
                <label>Cash</label>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>General Coupon</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Groupon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>